# sockudo

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  Package.resolved
.cargo/: audit.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  fuzz-smoke.yml  sdk-ci.yml  sdk-release.yml
client-sdks/sockudo-ai-transport-js/: README.md  pnpm-lock.yaml
client-sdks/sockudo-ai-transport-js/demo/: nuxt.config.ts
client-sdks/sockudo-kotlin/lib/: build.gradle.kts
config/: config.toml
crates/sockudo-adapter/src/: connection_manager.rs  horizontal_adapter.rs  horizontal_adapter_base.rs  local_adapter.rs  presence.rs
crates/sockudo-ai-transport/: Cargo.toml
crates/sockudo-ai-transport/src/: lib.rs
crates/sockudo-app/src/: mysql_app_manager.rs  pg_app_manager.rs
crates/sockudo-core/benches/: versioned_message_streaming.rs
crates/sockudo-core/src/: history.rs  metrics.rs  namespace.rs  options.rs  presence_history.rs  version_store.rs  websocket.rs
crates/sockudo-metrics/src/: prometheus.rs
crates/sockudo-protocol/src/: messages.rs  (+1 more)
crates/sockudo-server/: Cargo.toml
docs/: nuxt.config.ts  sdk-publishing-2026.md
docs/specs/: ai-transport-security-review.md  ai-transport-wire-protocol.md  compat-matrix.json  sdk-ecosystem-audit.md
fuzz/: Cargo.toml
scripts/: ai-rollup-load-test.mjs  ai-transport-ga-gate.sh  compat-release-rehearsal.mjs  generate-compat-matrix.mjs
server-sdks/sockudo-http-java/: build.gradle
server-sdks/sockudo-http-node/: package.json
server-sdks/sockudo-http-ruby/: .rubocop.yml
(+71 files in other folders)
