[package]
name = "sockudo-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sockudo-protocol = { path = "../crates/sockudo-protocol" }

[[bin]]
name = "ai_header_validator"
path = "fuzz_targets/ai_header_validator.rs"
test = false
doc = false
bench = false
