[package]
name = "sockudo-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sockudo-protocol = { path = "../crates/sockudo-protocol" }

[[bin]]
name = "ai_header_validator"
path = "fuzz_targets/ai_header_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wire_message"
path = "fuzz_targets/wire_message.rs"
test = false
doc = false
bench = false
